--- a/ubuntu/软件.md
+++ b/ubuntu/软件.md
@@ -57,24 +57,24 @@ sudo gdebi <deb>
 ## Atom
 [官网下载](https://atom.io/)
 
-### Java
+## Java
 ```bash
 sudo add-apt-repository ppa:webupd8team/java
 sudo apt-get update
 sudo apt-get install oracle-java8-installer
 ```
-### uGet
+## uGet
 下载工具
 ```bash
 sudo apt-get install uget
 ```
-### Thunar
+## Thunar
 文件管理器
 ```bash
 sudo apt-get install thunar
 ```
 设置里可以设置中键在新标签页中打开文件
-### PCManFM
+## PCManFM
 文件管理器
 ```bash
 sudo add-apt-repository ppa:lubuntu-dev/lubuntu-daily
@@ -102,9 +102,9 @@ NoDisplay=true
 
 ```
 
-### Wps
+## Wps
 [官网](http://www.ubuntukylin.com/application/show.php?lang=cn&id=278)下载
-#### 缺少字体
+### 缺少字体
 1. [这里](data/wps_symbol_fonts.zip)下载字体，解压，进入文件夹，复制到 `/usr/share/fonts` 目录中
 ```bash
 sudo cp * /usr/share/fonts/
@@ -120,10 +120,9 @@ sudo fc-cache
 ```
 
 如果缺少中文字体，可以将 windows 系统中 `Windows` -> `Fonts` 中的字体按照上面的方法添加到 ubuntu 系统中
-### SublimeText
+## SublimeText
 ```
 sudo add-apt-repository ppa:webupd8team/sublime-text-3
 sudo apt-get update
 sudo apt-get install sublime-text-installer
-
 ```
