--- a/idea/快捷键.md
+++ b/idea/快捷键.md
@@ -31,7 +31,12 @@
 * 定位到行 - `Ctrl + G`
 * 按单词删除 - `Ctrl + BackSpace`
 * 在多个 panel 中打开同一个文件 - `Shift + Enter`
+* 显示当前文件结构 - `Ctrl + ,`
 
 ## Mac 快捷键
 * 查看文档 - Ctrl + J
 * 加载文件 - `Command + Alt + y`
+
+## 插件
+* Vim
+* Code Glance
