--- a/idea/快捷键.md
+++ b/idea/快捷键.md
@@ -30,6 +30,8 @@
 * 全局查找 - `Ctrl + Shift + F`
 * 定位到行 - `Ctrl + G`
 * 按单词删除 - `Ctrl + BackSpace`
+* 在多个 panel 中打开同一个文件 - `Shift + Enter`
+* 显示当前文件结构 - `Ctrl + ,`
 
 ## Mac 快捷键
 * 查看文档 - Ctrl + J
