--- a/ubuntu/命令.md
+++ b/ubuntu/命令.md
@@ -205,3 +205,33 @@ dpkg -s package
 ```bash
 rsync -av --exclude='path1/to/exclude' --exclude='path2/to/exclude' source destination
 ```
+
+## xclip(复制粘贴)
+**安装**  
+```
+sudo apt-get install xclip
+```
+
+**X拷贝和粘贴**  
+拷贝到X的剪切板，也就是命令行。
+
+```
+echo "Hello, world" | xclip
+```
+使用 <kbd>shift</kbd> + <kbd>insert</kbd> 或者 xclip -o
+
+**Gnome拷贝和粘贴**  
+```
+echo "Hello, world" | xclip -selection clipboard
+echo "Hello, world" | xclip -sel clip
+```
+然后可以使用 <kbd>ctrl</kbd> + <kbd>v</kbd> 或者 <kbd>shift</kbd> + <kbd>Insert</kbd> 来粘贴
+
+**拷贝当前文件夹路径**  
+```
+pwd | xclip -selection clipboard
+```
+打开 .bashrc,为该命令添加别名,然后运行 cpwd 即可复制
+```
+alias cpwd="pwd | xclip -selection clipboard"
+```
