--- a/ubuntu/命令.md
+++ b/ubuntu/命令.md
@@ -235,3 +235,17 @@ pwd | xclip -selection clipboard
 ```
 alias cpwd="pwd | xclip -selection clipboard"
 ```
+
+## proxychains
+
+* [https://github.com/rofl0r/proxychains-ng](https://github.com/rofl0r/proxychains-ng)
+
+```
+./configure --prefix=/usr
+make
+sudo make install
+```
+配置文件位于
+```
+/home/<user>/.proxychains/proxychains.conf
+```
