--- a/idea/快捷键.md
+++ b/idea/快捷键.md
@@ -1,5 +1,6 @@
 ## Win 快捷键
-[Intellij IDEA 快捷键整理（TonyCody）](http://www.cnblogs.com/tonycody/p/3257601.html)
+ [Intellij IDEA 快捷键整理（TonyCody）](http://www.cnblogs.com/tonycody/p/3257601.html)  
+ [Top 20 Navigation Features in IntelliJ IDEA](https://dzone.com/articles/top-20-navigation-features-in-intellij-idea)
 
 * 格式化 - `Ctrl + Alt + L`
 * 自动修正 - `Ctrl + Enter`
@@ -9,7 +10,7 @@
 * 注释 - `Ctrl  + /` 或者 `Ctrl + Shift + /`
 * 查找类中的方法或者变量 - `Ctrl + Shift + Alt + N`
 * 上/下移一行 - `Alt + Shift + Up/Down`
-* 显示类层次结构 - `Ctrl + H`
+* 显示类层次结构(Type Hierarchy) - `Ctrl + H`  `Ctrl + Alt + O`
 * 显示注释文档 - `Ctrl + Q`
 * 返回上次浏览的位置 - `Ctrl + Alt + Left/Right`
 * 方法间快速定位 - `Alt + Up/Down`
@@ -31,12 +32,11 @@
 * 定位到行 - `Ctrl + G`
 * 按单词删除 - `Ctrl + BackSpace`
 * 在多个 panel 中打开同一个文件 - `Shift + Enter`
-* 显示当前文件结构 - `Ctrl + ,`
+* 显示当前文件结构(File Structure) - `Ctrl + F12` `Ctrl + ,`
+* 最近使用的文件 - `Ctrl + E`
+* Go to a symbol -  `Ctrl + Shift + Alt + N`
+
 
 ## Mac 快捷键
 * 查看文档 - Ctrl + J
 * 加载文件 - `Command + Alt + y`
-
-## 插件
-* Vim
-* Code Glance
