--- a/windows/配置.md
+++ b/windows/配置.md
@@ -1,8 +1,23 @@
 # 配置
-
+<!--toc-->
 ## 取消屏幕旋转快捷键
 以Intel集成显卡为例
 1. 打开【控制面板】
 2. 打开【英特尔图形和媒体控制面板】
 3. 进入【选项和支持】\【快捷键管理中心】
 4. 将【快捷键功能】取消勾选即可
+
+## .net 找不到 netfx_full_ldr_x64.msi
+1. 下载 dotnetfx cleanup tool，删除已有的 .net framework，重启电脑。
+    * [softpedia](http://www.softpedia.com/dyn-postdownload.php/e123c21e7b746181b24b415c2e90fae4/5a796148/1c751/4/1)  
+    * [百度网盘](https://pan.baidu.com/s/1gg9PWw7)  密码 `gtxu`
+2. 运行 `regedit` 打开注册表，在注册表中所有之前的 .net framework 版本，如果之前的是 4.5.3，就搜索 `.net framework 4.5.3`，将搜索到的注册表内容全部删除。
+3. 重新安装 .net framework。
+
+[参考地址](https://jingyan.baidu.com/article/b0b63dbf1d98f34a483070e6.html)
+
+## 为 Git Bash 添加 Rsync
+1. 去 [Pacman](http://www2.futureware.at/~nickoe/msys2-mirror/msys/x86_64/) 库中下载 [Rsync 的压缩文件](http://www2.futureware.at/~nickoe/msys2-mirror/msys/x86_64/rsync-3.1.3-1-x86_64.pkg.tar.xz)
+    * [百度网盘](https://pan.baidu.com/s/1mj4qgJI) 密码: `6x7z`
+2. 解压后将 `usr/bin` 目录下的 rsync 文件复制到 `<git_home>/usr/bin` 目录下即可。
+3. 可以按照上述步骤需要添加其他的程序。
