--- a/软件/键盘修改.md
+++ b/软件/键盘修改.md
@@ -1,8 +1,61 @@
 # 键盘修改
 
-## 修改按键
+<!-- toc -->
 
-[sharpkeys](https://github.com/randyrants/sharpkeys)
+## 按键
+
+* 修改按键 - [sharpkeys](https://github.com/randyrants/sharpkeys)
+* 检测按键 - [keycode](http://delphiforfun.org/programs/utilities/KeyCodes.htm)
 
 ## AutoHotkey
 
+### 基本使用
+
+* `#` - Win
+* `!` - Alt
+* `^` - Ctrl
+* `+` - Shift
+
+### 修改映射
+```
+;Notes: #==win !==Alt 2015-05-20  ^==Ctr  +==shift
+
+#k::
+    send {up}
+return
+
+#j::
+    send {down}
+return
+
+#l::
+    send {right}
+return
+
+#h::
+    send {left}
+return
+
+#i::
+    send {home}
+return
+
+#o::
+    send {end}
+return
+```
+
+
+### 关闭 win + L 快捷键
+
+HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Policies\System: DisableLockWorkstation 设为 1，如果没有新建一个 
+System 项，然后再 System 项中创建一个 DisableLockWorkstation DWORD32 值
+
+### 开机启动
+[How to Schedule AutoHotKey to Start Up with Windows](https://www.maketecheasier.com/schedule-autohotkey-startup-windows/)
+
+* 运行
+```
+%appdata%\Microsoft\Windows\Start Menu\Programs\Startup
+```
+* 新建快捷方式即可
