--- a/软件/键盘修改.md
+++ b/软件/键盘修改.md
@@ -5,6 +5,7 @@
 ## 按键
 
 * 修改按键 - [sharpkeys](https://github.com/randyrants/sharpkeys)
+	- 可以直接使用 AutoHotkey 修改
 * 检测按键 - [keycode](http://delphiforfun.org/programs/utilities/KeyCodes.htm)
 
 ## AutoHotkey
@@ -43,6 +44,71 @@ return
 #o::
     send {end}
 return
+
+#1::
+    send {F1}
+return
+
+#2::
+    send {F2}
+return
+
+#3::
+    send {F3}
+return
+
+#4::
+    send {F4}
+return
+
+#5::
+    send {F5}
+return
+
+#6::
+    send {F6}
+return
+
+#7::
+    send {F7}
+return
+
+#8::
+    send {F8}
+return
+
+#9::
+    send {F9}
+return
+
+#0::
+    send {F10}
+return
+
+#-::
+    send {F11}
+return
+
+#+::
+    send {F12}
+return
+
+#u::
+    send {`}
+return
+
+backspace::\
+\::backspace
+
+esc::`
+`::esc
+
+LCtrl::capslock
+capslock::LCtrl
+
+RAlt::Insert
+
+AppsKey::RWin
 ```
 
 
