--- a/ubuntu/软件.md
+++ b/ubuntu/软件.md
@@ -129,3 +129,17 @@ sudo apt-get update
 sudo apt-get install sublime-text-installer
 
 ```
+
+## Bashmarks
+在 bash 中添加目录的书签 [地址](https://github.com/huyng/bashmarks)
+
+使用
+```bash
+s <bookmark_name> - Saves the current directory as "bookmark_name"
+g <bookmark_name> - Goes (cd) to the directory associated with "bookmark_name"
+p <bookmark_name> - Prints the directory associated with "bookmark_name"
+d <bookmark_name> - Deletes the bookmark
+l                 - Lists all available bookmark
+```
+
+其中　`l` 可能会和系统中的命令冲突，可以打开　`~/.local/bin/bashmarks.sh` 将　`l` 修改为　`lb`
