--- a/java/多线程.md
+++ b/java/多线程.md
@@ -2,7 +2,7 @@
 
 ## 线程池数量
 
-N<sub>thread</sub> = N<sub>CPU</sub> * U<sub>CPU</sub> * (1 + W/C)
+N<sub>thread</sub> = N<sub>CPU</sub> \* U<sub>CPU</sub> \* (1 + W/C)
 
 * N<sub>CPU</sub> - 处理器的核数，可以通过 `Runtime.getRuntime().availableProcessors()` 获取
 * U<sub>CPU</sub> - 期望的 CPU 利用率
