--- a/ubuntu/配置.md
+++ b/ubuntu/配置.md
@@ -31,3 +31,25 @@ export CPLUS_INCLUDE_PATH=/home/zhangjikai/下载/seqan-library-2.3.2/include
 export LD_LIBRARY_PATH=/lib:/usr/lib:/usr/local/lib
 export PATH="$PATH:$HOME/gcc/bin/"
 ```
+
+## 自动输入指令
+```
+#!/usr/bin/expect
+set password "123"
+set hostname "123"
+
+spawn sudo poweroff
+expect "\\\[sudo\\\] 123 的密码："
+send "$password\r"
+expect "Please type in hostname of the machine to poweroff:"
+send "$hostname\r"
+interact
+```
+
+## 配置命令行代理
+proxychains
+
+```
+sudo vim /etc/proxychains.conf
+socks5 192.168.199.00 12345
+```
